# Tcode

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  package.json  run-docker.sh  run.sh
.github/workflows/: release.yml
crates/loom/: Cargo.toml
crates/loom-core/: Cargo.toml
crates/loom-core/src/: config.rs  lib.rs  session.rs
crates/loom/src/: app.rs  clipboard.rs  csvview.rs  dnd.rs  editor.rs  frame.rs  grid.rs  icons.rs  keys.rs  main.rs  pane.rs  preview.rs  session_picker.rs  sidebar.rs  theme.rs
crates/loom/src/frame/: canvas.rs  capture.rs  gallery.rs  state.rs
crates/tcode/: Cargo.toml
crates/tcode-core/: Cargo.toml
crates/tcode-core/src/: agents.rs  claude_trust.rs  clipboard.rs  conductor.rs  config.rs  fsutil.rs  grid.rs  lib.rs  session.rs
crates/tcode/assets/fonts/: ATTRIBUTION.txt
crates/tcode/assets/icons/: ATTRIBUTION.txt
crates/tcode/src/: app.rs  clipboard.rs  conductor.rs  csvview.rs  dnd.rs  editor.rs  frame.rs  grid.rs  icons.rs  keys.rs  main.rs  mission_control.rs  overlay.rs  pane.rs  preview.rs  session_picker.rs  sidebar.rs  theme.rs
crates/tcode/src/frame/: canvas.rs  capture.rs  export.rs  gallery.rs
crates/tessera/: Cargo.toml
crates/tessera-core/: Cargo.toml
crates/tessera-core/src/: config.rs  grid.rs  lib.rs  session.rs
crates/tessera/assets/fonts/: ATTRIBUTION.txt
crates/tessera/src/: app.rs  bridgeshot.rs  clipboard.rs  csvview.rs  dnd.rs  editor.rs  frame.rs  grid.rs  icons.rs  keys.rs  loader.rs  main.rs  pane.rs  picker.rs  preview.rs  session_picker.rs  sidebar.rs  theme.rs
crates/tessera/src/bridgeshot/: canvas.rs  capture.rs  export.rs  gallery.rs  state.rs  tools.rs
crates/tessera/src/frame/: capture.rs  export.rs  gallery.rs  tools.rs
docker/: loom-profile.sh  tcode-profile.sh  tessera-profile.sh
docs/: BUILD_LOG.md
docs/superpowers/plans/: 2026-06-18-tessera.md  2026-06-19-bridgeshot-v2.md
docs/superpowers/specs/: 2026-06-18-tessera-tiling-terminal-design.md  2026-06-19-bridgeshot-v2-design.md
packaging/: build-deb.sh  dev.tcode.Tcode.desktop  dev.tessera.Tessera.desktop  install.sh  loom.desktop  tessera.desktop  update.sh
samples/: README.md
samples/code/: Makefile  app.js  build.sh  config.toml  data.json  hello.py  index.html  lib.rs  main.c  notes.md  plain.txt  settings.yaml  table.csv
samples/documents/: letter.odt  notes.docx  sheet.ods  sheet.xlsx  slides.odp  slides.pptx
samples/images/: photo.tiff
samples/media-and-binaries/: video.webm
tools/: generate_tessera_gui_concept.py
