[package]
name = "tessera"
edition.workspace = true
version.workspace = true

[[bin]]
name = "tessera"
path = "src/main.rs"

[dependencies]
tessera-core = { path = "../tessera-core" }
# Versions verified against system GTK 4.14.5 / VTE 0.76.0 (verify-gtk4-vte4-api workflow).
# The crate version does NOT set the min system GTK — the highest enabled feature does.
# Cap at v4_14 / v0_76; never enable v4_16+, v0_78+, or vte4's gtk_v4_18.
gtk4 = { version = "0.11", features = ["v4_14"] }
vte4 = { version = "0.10", features = ["v0_76"] }
# GtkSourceView (neovim-style editor: line numbers + syntax highlighting).
# Depends on gtk4 ^0.11; needs system libgtksourceview-5-dev (>= 5.0).
sourceview5 = "0.11"
# Deliver document-render results from a worker thread to the GTK main thread
# (glib 0.22 removed MainContext::channel). Pure Rust, no system libs.
async-channel = "2"
# Enable cairo's PNG writer (ImageSurface::write_to_png) for BridgeShot export.
# Must match the cairo-rs that gtk4 0.11 re-exports (0.22); only adds `png`.
cairo-rs = { version = "0.22", features = ["png"] }
